hotfix: hover on button

--- a/blocks/timer/__button/timer__button.css
+++ b/blocks/timer/__button/timer__button.css
@@ -3,8 +3,42 @@
     padding: 24px 32px;
     border-radius: 20px;
     color: black;
-    font-size: 28px;
-    line-height: 85%;
-    font-family: 'AbadiMT', Arial, sans-serif;
     border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    p {
+        font-size: 28px;
+        line-height: 85%;
+        font-family: 'AbadiMT', Arial, sans-serif;
+        position: relative;
+        transition: all 0.3s ease-in-out;
+        padding: 0;
+        width: max-content;
+    }
+
+    p:before {
+        content: '';
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background-color: black;
+        width: 100%;
+        height: 1px;
+        transform-origin: right;
+        transform: scaleX(0);
+        transition: transform 0.3s ease-in-out;
+    }
 }
+
+.timer__button:hover {
+    cursor: pointer;
+
+    p:before {
+        transform-origin: left;
+        transform: scaleX(1);
+    }
+}
+
