--- a/pages/index.css
+++ b/pages/index.css
@@ -16,3 +16,4 @@
 @import url(../blocks/cards/__item/cards__item.css);
 @import url(../blocks/cards/__img/cards__img.css);
 @import url(../blocks/cards/__button/cards__button.css);
+@import url(../blocks/hover/hover.css);
