--- a/blocks/cards/__button/cards__button.css
+++ b/blocks/cards/__button/cards__button.css
@@ -3,8 +3,50 @@
     padding: 16px;
     border-radius: 12px;
     color: black;
-    font-size: 24px;
-    line-height: 85%;
-    font-family: 'AbadiMT', Arial, sans-serif;
     border: none;
+    display: flex;
+    justify-content: center;
+    position: relative;
+
+    p {
+        font-size: 24px;
+        line-height: 85%;
+        font-family: 'AbadiMT', Arial, sans-serif;
+        margin: 0;
+        position: relative;
+        transition: all 0.3s ease-in-out;
+        padding: 0;
+        width: max-content;
+    }
+
+    p:before {
+        content: '';
+        display: block;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background-color: black;
+        width: 100%;
+        height: 1px;
+        transform-origin: right;
+        transform: scaleX(0);
+        transition: transform 0.3s ease-in-out;
+    }
+
+    img {
+        position: absolute;
+        right: 14px;
+        bottom: 14px;
+        width: 24px;
+        height: 24px;
+    }
+}
+
+.cards__button:hover {
+    cursor: pointer;
+
+    p:before {
+        transform-origin: left;
+        transform: scaleX(1);
+    }
 }
