--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,3 +3,15 @@
     padding: 0 80px 80px 80px;
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 1439px) {
+    .cards {
+        padding: 20px 40px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cards {
+        padding: 20px;
+    }
+}
