--- a/blocks/cards/__container/cards__container.css
+++ b/blocks/cards/__container/cards__container.css
@@ -5,3 +5,11 @@
     margin: 0;
     padding: 0;
 }
+
+@media screen and (max-width: 1439px) {
+    .cards__container {
+        gap: 8px;
+        flex-wrap: wrap;
+    }
+}
+
