--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,15 @@
 .header__logo {
     max-width: 415px;
 }
+
+@media screen and (max-width: 1439px) {
+    .header__logo {
+        max-width: 297px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .header__logo {
+        max-width: 237px;
+    }
+}
