--- a/blocks/timer/__button/timer__button.css
+++ b/blocks/timer/__button/timer__button.css
@@ -42,3 +42,17 @@
     }
 }
 
+@media screen and (max-width: 1439px) {
+    .timer__button {
+        padding: 16px 0;
+        border-radius: 16px;
+        max-width: 320px;
+        width: 100%;
+
+        p {
+            font-size: 20px;
+        }
+    }
+}
+
+
