--- a/blocks/timer/__container/timer__container.css
+++ b/blocks/timer/__container/timer__container.css
@@ -8,3 +8,12 @@
     border: 1px solid #4d4d4d;
     backdrop-filter: blur(24px);
 }
+
+@media screen and (max-width: 1439px) {
+    .timer__container {
+        width: 100%;
+        padding: 48px 0;
+        align-items: center;
+        border-radius: 24px;
+    }
+}
