--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -4,6 +4,7 @@
     gap: 1rem;
     padding: 12px;
     background-color: rgba(255, 255, 255, 0.08);
+    -webkit-backdrop-filter: blur(24px);
     backdrop-filter: blur(24px);
     border-radius: 16px;
 }
