feat: add mobile and tablet layout

--- a/blocks/cards/__button/cards__button.css
+++ b/blocks/cards/__button/cards__button.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 52px;
 
     div {
         width: 24px;
@@ -18,9 +19,9 @@
         line-height: 85%;
         font-family: 'AbadiMT', Arial, sans-serif;
         margin: 0;
+        padding: 0;
         position: relative;
         transition: all 0.3s ease-in-out;
-        padding: 0;
         width: max-content;
     }
 
@@ -57,6 +58,7 @@
     .cards__button {
         padding: 9px 12px;
         border-radius: 8px;
+        height: 32px;
 
         p {
             font-size: 18px;
