--- a/blocks/cards/__button/cards__button.css
+++ b/blocks/cards/__button/cards__button.css
@@ -61,7 +61,7 @@
         height: 32px;
 
         p {
-            font-size: 18px;
+            font-size: 16px;
             line-height: 85%;
         }
 
@@ -73,6 +73,14 @@
         div {
             width: 20px;
             height: 20px;
+        }
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cards__button {
+        p {
+            font-size: 14px;
         }
     }
 }
