feat: add mobile and tablet layout

--- a/blocks/cards/__button/cards__button.css
+++ b/blocks/cards/__button/cards__button.css
@@ -23,6 +23,7 @@
         position: relative;
         transition: all 0.3s ease-in-out;
         width: max-content;
+        text-transform: uppercase;
     }
 
     p:before {
